--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>PUT INFO ABOUT YOU HERE</p>
+								<p>I am a veteran of the United States Navy, currently working as an Inventory Manager in Las Vegas, NV.  I created this portfolio to assist me in a career transition to data analytics by showcasing the work i have down so far.</p>
 							</article>
 
 						<!-- Contact -->
